--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Convite Especial</title>
+  <title>MARIANA</title>
 
   <!-- 🔔 ALERTA DE VISITA (simples + robusto) -->
   <script>
@@ -469,3 +469,4 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
   </script>
 </body>
 </html>
+
