--- a/pagina.html
+++ b/pagina.html
@@ -148,9 +148,9 @@
 “Essa aí é diferente.”
 E você é.
 Empática, cativante, honesta, atenciosa, trabalhadora...
-Daquelas mulheres raras que a vida não fabrica mais — uma verdadeira edição limitada.
+Daquelas mulheres raras que a vida não fabrica mais, uma verdadeira edição limitada.
 Além de educada e de boa família, dá pra ver de longe que você carrega valores que hoje são raridade.
-Mesmo quando faz cara de brava (rs), continua sendo uma daquelas pessoas que fazem bem só por estarem por perto.
+Mesmo sendo brava (rs), continua sendo uma daquelas pessoas que fazem bem só por estarem por perto.
 E como se tudo isso não bastasse… ainda tem o coração palmeirense.
 E olha… nem comecei a falar da sua beleza, do seu sorriso, e desse seu jeitinho doce que desarma até os dias mais difíceis.
 Com tudo isso, só me resta pedir uma chance…
