--- a/pagina.html
+++ b/pagina.html
@@ -5,35 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Por que eu quero uma chance?</title>
   <style>
-    /* ------------------------------
-       RESET E BASE TIPOGRÁFICA
-       ------------------------------ */
+    /* RESET E BASE */
     *, *::before, *::after { box-sizing: border-box; }
     :root { --card-bg: rgba(0,0,0,.55); }
 
-    /* ------------------------------
-       FUNDO COM A SUA FOTO
-       ------------------------------ */
+    /* FUNDO */
     body {
       margin: 0;
-      min-height: 100vh;     /* fallback */
-      min-height: 100dvh;    /* corrige viewport em mobile */
+      min-height: 100vh;
+      min-height: 100dvh;
       background-color: #ffffff;
       background-image: url("IMG_20250823_124847408.jpg");
       background-size: contain;
       background-position: center center;
       background-repeat: no-repeat;
-
-      display: grid;          /* centraliza o card */
+      display: grid;
       place-items: center;
-
       padding: 20px;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", sans-serif;
     }
 
-    /* ------------------------------
-       CARD (CONTAINER DO CONTEÚDO)
-       ------------------------------ */
+    /* CARD */
     .card {
       width: min(900px, 96vw);
       background: var(--card-bg);
@@ -42,7 +34,6 @@
       flex-direction: column;
       align-items: center;
       gap: 16px;
-
       padding: 28px 24px;
       border-radius: 16px;
       text-align: center;
@@ -50,103 +41,82 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.25);
     }
 
-    /* TÍTULO */
-    h1 {
-      margin: 0;
-      font-size: 28px;
-      line-height: 1.2;
-      text-shadow: 0 1px 2px rgba(0,0,0,.55);
-    }
+    h1 { margin: 0; font-size: 28px; line-height: 1.2; text-shadow: 0 1px 2px rgba(0,0,0,.55); }
 
-    /* ------------------------------
-       PARÁGRAFO COM EFEITO DE DIGITAÇÃO
-       ------------------------------ */
+    /* TEXTO DIGITANDO */
     .typing{
-      font-size: 18px;
-      line-height: 1.7;
-      color:#fff;
-
-      text-align: left;       /* leitura confortável */
-      max-width: 760px;
-      margin: 0 auto;
-
+      font-size: 18px; line-height: 1.7; color:#fff;
+      text-align: left; max-width: 760px; margin: 0 auto;
       border-right: 2px solid rgba(255,255,255,.9);
       animation: blink-caret .75s step-end infinite;
-      white-space: pre-wrap;
-      overflow-wrap: anywhere;
-      text-shadow: 0 1px 2px rgba(0,0,0,.55);
+      white-space: pre-wrap; overflow-wrap: anywhere; text-shadow: 0 1px 2px rgba(0,0,0,.55);
     }
     @keyframes blink-caret { 50% { border-color: transparent; } }
 
-    /* ------------------------------
-       AÇÕES (EMOJIS + RETORNAR)
-       ------------------------------ */
+    /* AÇÕES (🧠 | Retornar | 📚) */
     .actions{
       display: grid;
-      grid-template-columns: 1fr auto 1fr;  /* 🧠 | Retornar | 📚 */
+      grid-template-columns: 1fr auto 1fr;
       align-items: center;
       gap: 12px;
       width: 100%;
-      max-width: 760px;  /* acompanha a largura do texto */
+      max-width: 760px;
       margin-top: 8px;
     }
 
-    .btn {
-      padding: 12px 22px;
-      font-size: 16px;
-      border: none;
-      border-radius: 10px;
-      background: #4CAF50;
-      color: #fff;
-      cursor: pointer;
+    .btn{
+      padding: 12px 22px; font-size: 16px; border: none; border-radius: 10px;
+      background: #4CAF50; color:#fff; cursor: pointer;
       transition: transform .15s ease, filter .15s ease;
-      justify-self: center;  /* fica no centro da faixa */
+      justify-self: center;
     }
-    .btn:active { transform: scale(0.98); }
-    .btn:hover  { filter: brightness(1.05); }
+    .btn:active{ transform: scale(.98); }
+    .btn:hover { filter: brightness(1.05); }
 
-    /* Botões de emoji agora são inline dentro do card */
+    /* EASTER EGGS — CHAMATIVOS (sem órbita) */
     .egg-btn{
-      position: relative;     /* para o anel do ::after */
-      width: 44px; height: 44px;
+      position: relative; isolation: isolate;
+      width: 52px; height: 52px;
       display:flex; align-items:center; justify-content:center;
-      font-size: 22px; line-height: 1;
+      font-size: 26px; line-height: 1;
       border-radius: 999px;
-      background: rgba(255,255,255,.9);
+      background: radial-gradient(120% 120% at 30% 30%, #ffffff, #f6f6f6 70%);
       color:#222;
-      box-shadow: 0 6px 18px rgba(0,0,0,.25);
+      box-shadow: 0 10px 24px rgba(0,0,0,.28), 0 0 0 2px rgba(0,0,0,.06);
       border: 1px solid rgba(0,0,0,.08);
       cursor: pointer;
       backdrop-filter: blur(4px);
       transition: transform .15s ease, box-shadow .15s ease;
       user-select: none;
     }
-    .egg-btn:hover{ transform: translateY(-2px); box-shadow: 0 8px 22px rgba(0,0,0,.28); }
+    .egg-btn:hover{ transform: translateY(-2px); box-shadow: 0 12px 28px rgba(0,0,0,.3); }
 
-    /* ✨ PULSO/Glow para chamar atenção */
-    .egg-btn.attn{ animation: egg-pulse 1.8s ease-in-out infinite; }
+    .egg-brain{ --accent: rgba(255,106,162,.45); --accent-2:#ff7ac4; }
+    .egg-dict { --accent: rgba(255,184,77,.45);  --accent-2:#ffd45a; }
+
+    .egg-btn.attn{ animation: egg-pulse 1.7s ease-in-out infinite; }
     #eggBrain.attn{ animation-delay: .2s; }
     #eggDict.attn { animation-delay: .9s; }
 
+    /* anéis de brilho */
+    .egg-btn.attn::before,
     .egg-btn.attn::after{
-      content:"";
-      position:absolute; inset:-8px;
-      border-radius: 999px;
-      background: radial-gradient(closest-side, rgba(255,255,255,.55), rgba(255,255,255,0) 70%);
-      opacity: 0;
-      transform: scale(.8);
-      pointer-events:none;
-      animation: egg-glow 1.8s ease-in-out infinite;
+      content:""; position:absolute; inset:-10px; border-radius:inherit; z-index:-1;
+      box-shadow: 0 0 0 0 var(--accent);
+      opacity:.35; transform: scale(.85);
+      animation: egg-ring 2.1s ease-out infinite;
     }
+    .egg-btn.attn::after{ animation-delay: .9s; opacity:.25; }
+
     @keyframes egg-pulse{
-      0%   { transform: scale(1);   box-shadow: 0 6px 18px rgba(0,0,0,.25); }
-      50%  { transform: scale(1.08); box-shadow: 0 10px 26px rgba(0,0,0,.28); }
-      100% { transform: scale(1);   box-shadow: 0 6px 18px rgba(0,0,0,.25); }
+      0%{transform:scale(1)}
+      50%{transform:scale(1.12)}
+      100%{transform:scale(1)}
     }
-    @keyframes egg-glow{
-      0%   { opacity: 0;   transform: scale(.85); }
-      50%  { opacity: .35; transform: scale(1.18); }
-      100% { opacity: 0;   transform: scale(1.35); }
+    @keyframes egg-ring{
+      0%  { box-shadow: 0 0 0 0 var(--accent); opacity:.35; transform:scale(.85); }
+      70% { opacity:0; }
+      100%{ box-shadow: 0 0 0 26px rgba(0,0,0,0); transform:scale(1.4); }
     }
 
     .egg-left  { justify-self: start; }
@@ -154,54 +124,27 @@
 
     audio { display:none; }
 
-    /* ------------------------------
-       MODAL/DIÁLOGO DOS EASTER EGGS
-       ------------------------------ */
-    .egg-overlay{
-      position: fixed; inset: 0;
-      background: rgba(0,0,0,.5);
-      display: none;            /* aparece via .show */
-      align-items: center; justify-content: center;
-      padding: 18px;
-      z-index: 30;
-    }
+    /* MODAL */
+    .egg-overlay{ position: fixed; inset: 0; background: rgba(0,0,0,.5); display: none; align-items: center; justify-content: center; padding: 18px; z-index: 30; }
     .egg-overlay.show{ display:flex; }
-
-    .egg-box{
-      width: min(560px, 94vw);
-      background: #fff;
-      color: #222;
-      border-radius: 14px;
-      box-shadow: 0 16px 40px rgba(0,0,0,.35);
-      padding: 20px 18px 16px;
-      text-align: left;
-    }
+    .egg-box{ width: min(560px, 94vw); background: #fff; color: #222; border-radius: 14px; box-shadow: 0 16px 40px rgba(0,0,0,.35); padding: 20px 18px 16px; text-align: left; }
     .egg-box h2{ margin: 0 0 10px; font-size: 20px; }
-    .egg-box .content{
-      white-space: pre-wrap;
-      line-height: 1.6;
-      font-size: 16px;
-    }
+    .egg-box .content{ white-space: pre-wrap; line-height: 1.6; font-size: 16px; }
     .egg-actions{ display:flex; justify-content:flex-end; margin-top: 14px; }
-    .egg-close{
-      border: none; border-radius: 10px; padding: 10px 16px;
-      background: #4CAF50; color:#fff; cursor:pointer;
-    }
+    .egg-close{ border: none; border-radius: 10px; padding: 10px 16px; background: #4CAF50; color:#fff; cursor:pointer; }
 
-    /* Respeita usuários com redução de movimento */
+    /* Redução de movimento */
     @media (prefers-reduced-motion: reduce){
-      .egg-btn.attn, .egg-btn.attn::after{ animation: none !important; }
+      .egg-btn.attn, .egg-btn.attn::before, .egg-btn.attn::after{ animation: none !important; }
     }
 
-    /* ------------------------------
-       RESPONSIVIDADE
-       ------------------------------ */
+    /* RESPONSIVO */
     @media (max-width: 560px){
       .card { padding: 22px 16px; gap: 14px; }
       h1    { font-size: 24px; }
       .typing{ font-size: 17px; line-height: 1.6; max-width: 92%; }
       .actions{ max-width: 92%; }
-      .egg-btn{ width:40px; height:40px; font-size:20px; }
+      .egg-btn{ width:46px; height:46px; font-size:22px; }
     }
     @media (max-width: 360px){
       h1    { font-size: 22px; }
@@ -213,14 +156,12 @@
   <div class="card">
     <h1>Por que eu quero uma chance? 💖</h1>
 
-    <!-- O texto será digitado com o efeito -->
     <p id="textoDigitado" class="typing" aria-live="polite"></p>
 
-    <!-- 🧠 à esquerda | Retornar | 📚 à direita -->
     <div class="actions">
       <button
         id="eggBrain"
-        class="egg-btn egg-left attn"
+        class="egg-btn egg-left egg-brain attn"
         aria-label="Abrir: Vamos analisar esse caso clínico..."
         title="🧠 Vamos analisar esse caso clínico..."
       >🧠</button>
@@ -229,14 +170,14 @@
 
       <button
         id="eggDict"
-        class="egg-btn egg-right attn"
+        class="egg-btn egg-right egg-dict attn"
         aria-label="Abrir: Palavra do dia: “Mari”"
         title="📚 Palavra do dia: “Mari”"
       >📚</button>
     </div>
   </div>
 
-  <!-- Modal genérico para os dois easter eggs -->
+  <!-- Modal -->
   <div id="eggModal" class="egg-overlay" role="dialog" aria-modal="true" aria-hidden="true">
     <div class="egg-box" role="document">
       <h2 id="eggTitle">Título</h2>
@@ -247,7 +188,7 @@
     </div>
   </div>
 
-  <!-- Música em loop (tenta iniciar automaticamente) -->
+  <!-- Música -->
   <audio id="bgm" src="careless_whispers.mp3" autoplay loop playsinline></audio>
 
   <script>
@@ -265,7 +206,7 @@
       window.addEventListener("focus", tryPlay);
     });
 
-    /* ===== TEXTO ===== */
+    /* TEXTO */
     const texto =
 `Tem pessoas que a gente conhece e logo sente:
 “Essa aí é diferente.”
@@ -283,7 +224,6 @@ E todas as outras que só você tem.`;
     const destino = document.getElementById("textoDigitado");
     let index = 0;
 
-    /* Velocidade ajustada (1,75× do original) */
     const BASE_INTERVAL   = 9;
     const COMMA_PAUSE     = 14;
     const SENTENCE_PAUSE  = 29;
@@ -303,13 +243,11 @@ E todas as outras que só você tem.`;
       }
       const c = texto.charAt(index);
       if (c === ' '){
-        destino.append(' ');
-        index++;
+        destino.append(' '); index++;
         return setTimeout(digitarSequencial, BASE_INTERVAL);
       }
       if (c === '\n'){
-        destino.appendChild(document.createElement('br'));
-        index++;
+        destino.appendChild(document.createElement('br')); index++;
         return setTimeout(digitarSequencial, BASE_INTERVAL + SENTENCE_PAUSE);
       }
       const span = document.createElement('span');
@@ -329,27 +267,23 @@ E todas as outras que só você tem.`;
         }, FADE_DURATION);
       }, REVEAL_DELAY);
     }
-
-    // Inicializa o efeito ao carregar
     window.addEventListener('load', digitarSequencial);
 
-    /* ===== EASTER EGGS: modal genérico ===== */
+    /* MODAL */
     const modal = document.getElementById('eggModal');
     const eggTitle = document.getElementById('eggTitle');
     const eggContent = document.getElementById('eggContent');
     const eggClose = document.getElementById('eggClose');
 
-    /* 🧠 (já atualizado anteriormente) */
     const BRAIN_TITLE = '🧠 Vamos analisar esse caso clínico...';
     const BRAIN_TEXT  = 'Paciente apresenta sintomas de apego progressivo, pensamento acelerado, sorriso involuntário, e comportamento de admiração. Diagnóstico provável: envolvimento afetivo crônico não resolvido.';
 
-    /* 📚 ATUALIZADO CONFORME PEDIDO */
     const DICT_TITLE = '📚 Palavra do dia: “Mari”';
     const DICT_TEXT  = 'Substantivo feminino. Unidade de medida para tudo que faz bem, inspira paz, e melhora o humor de alguém chamado Matheus.';
 
     function openEgg(title, text){
       eggTitle.textContent = title;
-      eggContent.textContent = text;      // preserva texto puro
+      eggContent.textContent = text;
       modal.classList.add('show');
       modal.setAttribute('aria-hidden', 'false');
       eggClose.focus();
